mule-user-guide/v/3.8/set-payload-transformer-reference.adoc
= Set Payload Transformer Reference
:keywords: anypoint studio, mule, set payload, payload

This transformer sets the payload to whatever you define. The payload can be a literal string or a link:/mule-user-guide/v/3.8/mule-expression-language-mel[Mule Expression].

== Configuration

[tabs]
------
[tab,title="Studio Visual Editor"]
....
image:set_payload.png[set_payload]

[cols="10a,90a",options="header"]
|===
|Field |Description
|Display Name |Customize to display a unique name for the transformer in your application.

*Value:* Set Payload +
*XML:* `doc:name="Set Payload"`
|Value |Enter a literal string or a Mule expression that defines how Mule should set the payload.

*Value:* String or Mule Expression +
*XML:* `value="#['Hello, ' + message.payload]"`
|===
....
[tab,title=XML "Editor or Standalone"]
....

[source, xml, linenums]
----
# Example setting a payload to a literal string.
 
<set-payload value="MyNewPayload" doc:name="Set Payload"/>
 
# Example setting a payload using a Mule expression. This takes the current payload and transforms it by adding the string "Hello " in front of it. Thus, if your payload was "Charlie", this set-payload transformer changes it to "Hello, Charlie".
 
<set-payload value="#['Hello, ' + message.payload]" doc:name="Set Payload"/>
----

[cols=",",options="header"]
|===
|Element |Description
|*set-payload* |Set a payload on your message (as shown in examples above).
|===

[width="100%",cols="50%,50%",options="header"]
|===
|Element Attribute |Description
|*value* |The literal string or Mule expression that defines how Mule should set the payload.
|*doc:name* a|
Customize to display a unique name for the transformer in your application.

Note: Attribute not required in Mule Standalone configuration.
|===
....
------

== Example

In this example, the Set Payload transformer sets the payload to a "Hello, World" message that includes today's date (retrieved using a Mule expression.)

[tabs]
------
[tab,title="Studio Visual Editor"]
....

image:set+payload+flow.png[set+payload+flow]

The following example sets the Set Payload to: +
`#['Hello World!' + ' Today is ' + server.dateTime.format('dd/MM/yy')]`

This displays: "Hello World! Today is <today's date>"

image:set+payload.png[set+payload]
....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
imclude::_souces/set-payload-transformer-reference.xml[]
----
....
------
== See Also

* See the link:/mule-fundamentals/v/3.8/anypoint-exchange[examples].
* Read more about link:/mule-user-guide/v/3.8/transformers[other transformers] available in Mule.
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
